Begin working on improving code highlight for certain important sections

--- a/frontend/src/app/request/request-details/request-details.component.html
+++ b/frontend/src/app/request/request-details/request-details.component.html
@@ -4,48 +4,48 @@
   <h2>Request details</h2>
   <dl>
     <dt>Client IP</dt>
-    <dd><code [highlight]>{{requestDetails.clientIP}}</code></dd>
+    <dd><code >{{requestDetails.clientIP}}</code></dd>
     <dt>Headers</dt>
-    <dd><code [highlight]>{{requestDetails.headers}}</code></dd>
+    <dd><code class="language-json">{{requestDetails.headers}}</code></dd>
     <dt>Host</dt>
-    <dd><code [highlight]>{{requestDetails.host}}</code></dd>
+    <dd><code >{{requestDetails.host}}</code></dd>
     <dt>Method</dt>
-    <dd><code [highlight]>{{requestDetails.method}}</code></dd>
+    <dd><code >{{requestDetails.method}}</code></dd>
     <dt>Path</dt>
-    <dd><code [highlight]>{{requestDetails.path}}</code></dd>
+    <dd><code >{{requestDetails.path}}</code></dd>
     <dt>Referrer</dt>
-    <dd><code [highlight]>{{requestDetails.referrer}}</code></dd>
+    <dd><code >{{requestDetails.referrer}}</code></dd>
     <dt>Time</dt>
-    <dd><code [highlight]>{{requestDetails.time}}</code></dd>
+    <dd><code >{{requestDetails.time}}</code></dd>
     <dt>UID</dt>
-    <dd><code [highlight]>{{requestDetails.uid}}</code></dd>
+    <dd><code >{{requestDetails.uid}}</code></dd>
     <dt>URL</dt>
-    <dd><code [highlight]>{{requestDetails.url}}</code></dd>
+    <dd><code >{{requestDetails.url}}</code></dd>
     <dt>User Agent</dt>
-    <dd><code [highlight]>{{requestDetails.userAgent}}</code></dd>
+    <dd><code >{{requestDetails.userAgent}}</code></dd>
     <dt>Body</dt>
-    <dd><code [highlight]>{{requestDetails.body}}</code></dd>
+    <dd><code >{{requestDetails.body}}</code></dd>
   </dl>
 
   <h1>Response details</h1>
   <dl>
     <dt>Client IP</dt>
-    <dd><code [highlight]>{{responseDetails.clientIP}}</code></dd>
+    <dd><code >{{responseDetails.clientIP}}</code></dd>
     <dt>Headers</dt>
-    <dd><code [highlight]>{{responseDetails.headers}}</code></dd>
+    <dd><code >{{responseDetails.headers}}</code></dd>
     <dt>Path</dt>
-    <dd><code [highlight]>{{responseDetails.path}}</code></dd>
+    <dd><code >{{responseDetails.path}}</code></dd>
     <dt>Size</dt>
-    <dd><code [highlight]>{{responseDetails.size}}</code></dd>
+    <dd><code >{{responseDetails.size}}</code></dd>
     <dt>Status</dt>
-    <dd><code [highlight]>{{responseDetails.status}}</code></dd>
+    <dd><code >{{responseDetails.status}}</code></dd>
     <dt>Time</dt>
-    <dd><code [highlight]>{{responseDetails.time}}</code></dd>
+    <dd><code >{{responseDetails.time}}</code></dd>
     <dt>RequestUID</dt>
-    <dd><code [highlight]>{{responseDetails.requestUID}}</code></dd>
+    <dd><code >{{responseDetails.requestUID}}</code></dd>
     <dt>UID</dt>
-    <dd><code [highlight]>{{responseDetails.uid}}</code></dd>
+    <dd><code >{{responseDetails.uid}}</code></dd>
     <dt>Body</dt>
-    <dd><code [highlight]>{{responseDetails.body}}</code></dd>
+    <dd><code >{{responseDetails.body}}</code></dd>
   </dl>
 </section>
