--- a/frontend/src/app/systeminfo/details/details.component.html
+++ b/frontend/src/app/systeminfo/details/details.component.html
@@ -4,45 +4,45 @@
 <h1>CPU</h1>
 <dl>
   <dt>Core Count</dt>
-  <dd><code [highlight]>{{systemInformation.cpu.coreCount}}</code></dd>
+  <dd><code >{{systemInformation.cpu.coreCount}}</code></dd>
   <dt>Model</dt>
-  <dd><code [highlight]>{{systemInformation.cpu.modelName}}</code></dd>
+  <dd><code >{{systemInformation.cpu.modelName}}</code></dd>
 </dl>
 
 <h1>Disk</h1>
 <dl>
   <dt>Free space</dt>
-  <dd><code [highlight]>{{systemInformation.disk.freeSpace}}</code></dd>
+  <dd><code >{{systemInformation.disk.freeSpace}}</code></dd>
   <dt>Partition Type</dt>
-  <dd><code [highlight]>{{systemInformation.disk.partitionType}}</code></dd>
+  <dd><code >{{systemInformation.disk.partitionType}}</code></dd>
   <dt>Mount Path</dt>
-  <dd><code [highlight]>{{systemInformation.disk.mountPath}}</code></dd>
+  <dd><code >{{systemInformation.disk.mountPath}}</code></dd>
   <dt>Total Space</dt>
-  <dd><code [highlight]>{{systemInformation.disk.totalSpace}}</code></dd>
+  <dd><code >{{systemInformation.disk.totalSpace}}</code></dd>
 </dl>
 
 <h1>Host</h1>
 <dl>
   <dt>Kernel Arch</dt>
-  <dd><code [highlight]>{{systemInformation.host.kernelArch}}</code></dd>
+  <dd><code >{{systemInformation.host.kernelArch}}</code></dd>
   <dt>Kernel Version</dt>
-  <dd><code [highlight]>{{systemInformation.host.kernelVersion}}</code></dd>
+  <dd><code >{{systemInformation.host.kernelVersion}}</code></dd>
   <dt>Hostname</dt>
-  <dd><code [highlight]>{{systemInformation.host.hostname}}</code></dd>
+  <dd><code >{{systemInformation.host.hostname}}</code></dd>
   <dt>Host OS</dt>
-  <dd><code [highlight]>{{systemInformation.host.hostOS}}</code></dd>
+  <dd><code >{{systemInformation.host.hostOS}}</code></dd>
   <dt>Platform</dt>
-  <dd><code [highlight]>{{systemInformation.host.hostPlatform}}</code></dd>
+  <dd><code >{{systemInformation.host.hostPlatform}}</code></dd>
   <dt>Uptime</dt>
-  <dd><code [highlight]>{{systemInformation.host.uptime}}</code></dd>
+  <dd><code >{{systemInformation.host.uptime}}</code></dd>
 </dl>
 
 <h1>Memory</h1>
 <dl>
   <dt>Status</dt>
-  <dd><code [highlight]>{{systemInformation.memory.availableMemory}} available of {{systemInformation.memory.totalMemory}}</code></dd>
+  <dd><code >{{systemInformation.memory.availableMemory}} available of {{systemInformation.memory.totalMemory}}</code></dd>
   <dt>Swap usage</dt>
-  <dd><code [highlight]>{{systemInformation.memory.usedSwap}}</code></dd>
+  <dd><code >{{systemInformation.memory.usedSwap}}</code></dd>
 </dl>
 
 </section>
