--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -1,95 +1,104 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Fira+Code:400,500,600,700');
+
 :root {
-    --links: #7CC3BF;
-    --code: #ccc;
+  --links: #7cc3bf;
+  #--code: #ccc;
+}
+
+body {
+  font-family: "Roboto Condensed", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif !important;
 }
 
 @media (prefers-color-scheme: light) {
-    :root {
-        --links: #6CA8A5;
-    }
+  :root {
+    --links: #6ca8a5;
+  }
 }
 dt {
-    margin-bottom: 6px;
+  margin-bottom: 6px;
 }
 
 dd {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .code-block {
-    background: var(--background);
+  background: var(--background);
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 
 .text-right {
-    text-align: right;
+  text-align: right;
 }
 
 code {
-    font-family: "Fira Mono", monospace;
+  font-family: "Fira Code", monospace;
+  font-weight: normal;
 }
 
 .badge-success {
-    padding: 4px;
-    border-radius: 4px;
-    color: #fff;
-    background-color: #1f9d55;
+  padding: 4px;
+  border-radius: 4px;
+  color: #fff;
+  background-color: #1f9d55;
 }
 
 .badge-info {
-    padding: 4px;
-    border-radius: 4px;
-    color: #fff;
-    background-color: #1c3d5a;
+  padding: 4px;
+  border-radius: 4px;
+  color: #fff;
+  background-color: #1c3d5a;
 }
 
 .badge-turq {
-    padding: 4px;
-    border-radius: 4px;
-    color: #fff;
-    background-color: #503194;
+  padding: 4px;
+  border-radius: 4px;
+  color: #fff;
+  background-color: #503194;
 }
 
 .badge-secondary {
-    border-radius: 4px;
-    padding: 4px;
-    color: #fff;
-    background-color: #494444;
+  border-radius: 4px;
+  padding: 4px;
+  color: #fff;
+  background-color: #494444;
 }
 
 .badge-danger {
-    border-radius: 4px;
-    padding: 4px;
-    color: #fff;
-    background-color: #621b18;
+  border-radius: 4px;
+  padding: 4px;
+  color: #fff;
+  background-color: #621b18;
 }
 
 .badge-warning {
-    border-radius: 4px;
-    padding: 4px;
-    color: #fff;
-    background-color: #684f1d;
+  border-radius: 4px;
+  padding: 4px;
+  color: #fff;
+  background-color: #684f1d;
 }
 
 .svg-icon {
-    fill: var(--text-main);
+  fill: var(--text-main);
 }
 
 button:hover .svg-icon,
 a:hover .svg-icon {
-    fill: var(--links) !important;
+  fill: var(--links) !important;
 }
 
 .eye-link {
-    color: var(--text-main);
-    fill: var(--text-main);
+  color: var(--text-main);
+  fill: var(--text-main);
 }
 .eye-link:hover {
-    color: var(--links);
-    fill: var(--links);
+  color: var(--links);
+  fill: var(--links);
 }
 
 .search-bar {
@@ -109,7 +118,7 @@ a:hover .svg-icon {
 }
 .vue-tags-input,
 .vue-tags-input * {
-border-radius: 6px;
+  border-radius: 6px;
 }
 .vue-tags-input.ti-focus {
   box-shadow: 0 0 0 2px var(--focus);
