--- a/frontend/public/css/light.css
+++ b/frontend/public/css/light.css
@@ -1,32 +1,32 @@
 /**
- * Forced dark theme version
+ * Forced light theme version
  */
 
 :root {
-    --background-body: #202b38;
-    --background: #161f27;
-    --background-alt: #1a242f;
-    --selection: #1c76c5;
-    --text-main: #dbdbdb;
-    --text-bright: #fff;
-    --text-muted: #a9b1ba;
-    --links: #41adff;
+    --background-body: #fff;
+    --background: #efefef;
+    --background-alt: #f7f7f7;
+    --selection: #9e9e9e;
+    --text-main: #363636;
+    --text-bright: #000;
+    --text-muted: #70777f;
+    --links: #0076d1;
     --focus: #0096bfab;
-    --border: #526980;
-    --code: #f6fff5;
+    --border: #dbdbdb;
+    --code: #000;
     --animation-duration: 0.1s;
-    --button-hover: #324759;
-    --scrollbar-thumb: var(--button-hover);
-    --scrollbar-thumb-hover: rgb(65, 92, 115);
-    --form-placeholder: #a9a9a9;
-    --form-text: #fff;
-    --variable: #d941e2;
-    --highlight: #efdb43;
-    --select-arrow: url("data:image/svg+xml;charset=utf-8,%3C?xml version='1.0' encoding='utf-8'?%3E %3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' height='62.5' width='116.9' fill='%23efefef'%3E %3Cpath d='M115.3,1.6 C113.7,0 111.1,0 109.5,1.6 L58.5,52.7 L7.4,1.6 C5.8,0 3.2,0 1.6,1.6 C0,3.2 0,5.8 1.6,7.4 L55.5,61.3 C56.3,62.1 57.3,62.5 58.4,62.5 C59.4,62.5 60.5,62.1 61.3,61.3 L115.2,7.4 C116.9,5.8 116.9,3.2 115.3,1.6Z'/%3E %3C/svg%3E");
+    --button-hover: #ddd;
+    --scrollbar-thumb: rgb(213, 213, 213);
+    --scrollbar-thumb-hover: rgb(196, 196, 196);
+    --form-placeholder: #949494;
+    --form-text: #000;
+    --variable: #39a33c;
+    --highlight: #ff0;
+    --select-arrow: url("data:image/svg+xml;charset=utf-8,%3C?xml version='1.0' encoding='utf-8'?%3E %3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' height='62.5' width='116.9' fill='%23161f27'%3E %3Cpath d='M115.3,1.6 C113.7,0 111.1,0 109.5,1.6 L58.5,52.7 L7.4,1.6 C5.8,0 3.2,0 1.6,1.6 C0,3.2 0,5.8 1.6,7.4 L55.5,61.3 C56.3,62.1 57.3,62.5 58.4,62.5 C59.4,62.5 60.5,62.1 61.3,61.3 L115.2,7.4 C116.9,5.8 116.9,3.2 115.3,1.6Z'/%3E %3C/svg%3E");
 }
 
 html {
-    scrollbar-color: #324759 #202b38;
+    scrollbar-color: rgb(213, 213, 213) #fff;
     scrollbar-color: var(--scrollbar-thumb) var(--background-body);
     scrollbar-width: thin;
 }
@@ -38,9 +38,9 @@ body {
     margin: 20px auto;
     padding: 0 10px;
     word-wrap: break-word;
-    color: #dbdbdb;
+    color: #363636;
     color: var(--text-main);
-    background: #202b38;
+    background: #fff;
     background: var(--background-body);
     text-rendering: optimizeLegibility;
 }
@@ -106,37 +106,37 @@ h6 {
 }
 
 h1 {
-    color: #fff;
+    color: #000;
     color: var(--text-bright);
 }
 
 h2 {
-    color: #fff;
+    color: #000;
     color: var(--text-bright);
 }
 
 h3 {
-    color: #fff;
+    color: #000;
     color: var(--text-bright);
 }
 
 h4 {
-    color: #fff;
+    color: #000;
     color: var(--text-bright);
 }
 
 h5 {
-    color: #fff;
+    color: #000;
     color: var(--text-bright);
 }
 
 h6 {
-    color: #fff;
+    color: #000;
     color: var(--text-bright);
 }
 
 strong {
-    color: #fff;
+    color: #000;
     color: var(--text-bright);
 }
 
@@ -202,7 +202,7 @@ a[href^='sms\:']::before {
 }
 
 mark {
-    background-color: #efdb43;
+    background-color: #ff0;
     background-color: var(--highlight);
     border-radius: 2px;
     padding: 0 2px 0 2px;
@@ -225,9 +225,9 @@ select {
 }
 
 input {
-    color: #fff;
+    color: #000;
     color: var(--form-text);
-    background-color: #161f27;
+    background-color: #efefef;
     background-color: var(--background);
     font-family: inherit;
     font-size: inherit;
@@ -240,9 +240,9 @@ input {
 }
 
 button {
-    color: #fff;
+    color: #000;
     color: var(--form-text);
-    background-color: #161f27;
+    background-color: #efefef;
     background-color: var(--background);
     font-family: inherit;
     font-size: inherit;
@@ -255,9 +255,9 @@ button {
 }
 
 textarea {
-    color: #fff;
+    color: #000;
     color: var(--form-text);
-    background-color: #161f27;
+    background-color: #efefef;
     background-color: var(--background);
     font-family: inherit;
     font-size: inherit;
@@ -270,9 +270,9 @@ textarea {
 }
 
 select {
-    color: #fff;
+    color: #000;
     color: var(--form-text);
-    background-color: #161f27;
+    background-color: #efefef;
     background-color: var(--background);
     font-family: inherit;
     font-size: inherit;
@@ -329,7 +329,7 @@ textarea:not([rows]) {
 }
 
 select {
-    background: #161f27 url("data:image/svg+xml;charset=utf-8,%3C?xml version='1.0' encoding='utf-8'?%3E %3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' height='62.5' width='116.9' fill='%23efefef'%3E %3Cpath d='M115.3,1.6 C113.7,0 111.1,0 109.5,1.6 L58.5,52.7 L7.4,1.6 C5.8,0 3.2,0 1.6,1.6 C0,3.2 0,5.8 1.6,7.4 L55.5,61.3 C56.3,62.1 57.3,62.5 58.4,62.5 C59.4,62.5 60.5,62.1 61.3,61.3 L115.2,7.4 C116.9,5.8 116.9,3.2 115.3,1.6Z'/%3E %3C/svg%3E") calc(100% - 12px) 50% / 12px no-repeat;
+    background: #efefef url("data:image/svg+xml;charset=utf-8,%3C?xml version='1.0' encoding='utf-8'?%3E %3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' height='62.5' width='116.9' fill='%23161f27'%3E %3Cpath d='M115.3,1.6 C113.7,0 111.1,0 109.5,1.6 L58.5,52.7 L7.4,1.6 C5.8,0 3.2,0 1.6,1.6 C0,3.2 0,5.8 1.6,7.4 L55.5,61.3 C56.3,62.1 57.3,62.5 58.4,62.5 C59.4,62.5 60.5,62.1 61.3,61.3 L115.2,7.4 C116.9,5.8 116.9,3.2 115.3,1.6Z'/%3E %3C/svg%3E") calc(100% - 12px) 50% / 12px no-repeat;
     background: var(--background) var(--select-arrow) calc(100% - 12px) 50% / 12px no-repeat;
     padding-right: 35px;
 }
@@ -352,17 +352,17 @@ input[type='button'] {
 }
 
 button:hover {
-    background: #324759;
+    background: #ddd;
     background: var(--button-hover);
 }
 
 input[type='submit']:hover {
-    background: #324759;
+    background: #ddd;
     background: var(--button-hover);
 }
 
 input[type='button']:hover {
-    background: #324759;
+    background: #ddd;
     background: var(--button-hover);
 }
 
@@ -404,22 +404,22 @@ textarea:disabled {
 }
 
 ::-moz-placeholder {
-    color: #a9a9a9;
+    color: #949494;
     color: var(--form-placeholder);
 }
 
 :-ms-input-placeholder {
-    color: #a9a9a9;
+    color: #949494;
     color: var(--form-placeholder);
 }
 
 ::-ms-input-placeholder {
-    color: #a9a9a9;
+    color: #949494;
     color: var(--form-placeholder);
 }
 
 ::placeholder {
-    color: #a9a9a9;
+    color: #949494;
     color: var(--form-placeholder);
 }
 
@@ -452,7 +452,7 @@ input[type='range']::-webkit-slider-runnable-track {
     height: 9.5px;
     -webkit-transition: 0.2s;
     transition: 0.2s;
-    background: #161f27;
+    background: #efefef;
     background: var(--background);
     border-radius: 3px;
 }
@@ -462,14 +462,14 @@ input[type='range']::-webkit-slider-thumb {
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    background: #526980;
+    background: #dbdbdb;
     background: var(--border);
     -webkit-appearance: none;
     margin-top: -7px;
 }
 
 input[type='range']:focus::-webkit-slider-runnable-track {
-    background: #161f27;
+    background: #efefef;
     background: var(--background);
 }
 
@@ -478,7 +478,7 @@ input[type='range']::-moz-range-track {
     height: 9.5px;
     -moz-transition: 0.2s;
     transition: 0.2s;
-    background: #161f27;
+    background: #efefef;
     background: var(--background);
     border-radius: 3px;
 }
@@ -488,7 +488,7 @@ input[type='range']::-moz-range-thumb {
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    background: #526980;
+    background: #dbdbdb;
     background: var(--border);
 }
 
@@ -502,7 +502,7 @@ input[type='range']::-ms-track {
 }
 
 input[type='range']::-ms-fill-lower {
-    background: #161f27;
+    background: #efefef;
     background: var(--background);
     border: 0.2px solid #010101;
     border-radius: 3px;
@@ -510,7 +510,7 @@ input[type='range']::-ms-fill-lower {
 }
 
 input[type='range']::-ms-fill-upper {
-    background: #161f27;
+    background: #efefef;
     background: var(--background);
     border: 0.2px solid #010101;
     border-radius: 3px;
@@ -523,23 +523,23 @@ input[type='range']::-ms-thumb {
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    background: #526980;
+    background: #dbdbdb;
     background: var(--border);
 }
 
 input[type='range']:focus::-ms-fill-lower {
-    background: #161f27;
+    background: #efefef;
     background: var(--background);
 }
 
 input[type='range']:focus::-ms-fill-upper {
-    background: #161f27;
+    background: #efefef;
     background: var(--background);
 }
 
 a {
     text-decoration: none;
-    color: #41adff;
+    color: #0076d1;
     color: var(--links);
 }
 
@@ -548,9 +548,9 @@ a:hover {
 }
 
 code {
-    background: #161f27;
+    background: #efefef;
     background: var(--background);
-    color: #ffbe85;
+    color: #000;
     color: var(--code);
     padding: 2.5px 5px;
     border-radius: 6px;
@@ -558,9 +558,9 @@ code {
 }
 
 samp {
-    background: #161f27;
+    background: #efefef;
     background: var(--background);
-    color: #ffbe85;
+    color: #000;
     color: var(--code);
     padding: 2.5px 5px;
     border-radius: 6px;
@@ -568,9 +568,9 @@ samp {
 }
 
 time {
-    background: #161f27;
+    background: #efefef;
     background: var(--background);
-    color: #ffbe85;
+    color: #000;
     color: var(--code);
     padding: 2.5px 5px;
     border-radius: 6px;
@@ -584,19 +584,19 @@ pre > code {
 }
 
 var {
-    color: #d941e2;
+    color: #39a33c;
     color: var(--variable);
     font-style: normal;
     font-family: monospace;
 }
 
 kbd {
-    background: #161f27;
+    background: #efefef;
     background: var(--background);
-    border: 1px solid #526980;
+    border: 1px solid #dbdbdb;
     border: 1px solid var(--border);
     border-radius: 2px;
-    color: #dbdbdb;
+    color: #363636;
     color: var(--text-main);
     padding: 2px 4px 2px 4px;
 }
@@ -609,7 +609,7 @@ video {
 
 hr {
     border: none;
-    border-top: 1px solid #526980;
+    border-top: 1px solid #dbdbdb;
     border-top: 1px solid var(--border);
 }
 
@@ -633,17 +633,17 @@ th {
 }
 
 thead {
-    border-bottom: 1px solid #526980;
+    border-bottom: 1px solid #dbdbdb;
     border-bottom: 1px solid var(--border);
 }
 
 tfoot {
-    border-top: 1px solid #526980;
+    border-top: 1px solid #dbdbdb;
     border-top: 1px solid var(--border);
 }
 
 tbody tr:nth-child(even) {
-    background-color: #1a242f;
+    background-color: #f7f7f7;
     background-color: var(--background-alt);
 }
 
@@ -653,33 +653,33 @@ tbody tr:nth-child(even) {
 }
 
 ::-webkit-scrollbar-track {
-    background: #161f27;
+    background: #efefef;
     background: var(--background);
     border-radius: 6px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #324759;
+    background: rgb(213, 213, 213);
     background: var(--scrollbar-thumb);
     border-radius: 6px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: rgb(65, 92, 115);
+    background: rgb(196, 196, 196);
     background: var(--scrollbar-thumb-hover);
 }
 
 ::-moz-selection {
-    background-color: #1c76c5;
+    background-color: #9e9e9e;
     background-color: var(--selection);
-    color: #fff;
+    color: #000;
     color: var(--text-bright);
 }
 
 ::selection {
-    background-color: #1c76c5;
+    background-color: #9e9e9e;
     background-color: var(--selection);
-    color: #fff;
+    color: #000;
     color: var(--text-bright);
 }
 
@@ -687,7 +687,7 @@ details {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    background-color: #1a242f;
+    background-color: #f7f7f7;
     background-color: var(--background-alt);
     padding: 10px 10px 0;
     margin: 1em 0;
@@ -709,7 +709,7 @@ details[open] summary {
 
 summary {
     display: list-item;
-    background-color: #161f27;
+    background-color: #efefef;
     background-color: var(--background);
     padding: 10px;
     margin: -10px -10px 0;
@@ -727,15 +727,15 @@ details > :not(summary) {
 }
 
 summary::-webkit-details-marker {
-    color: #dbdbdb;
+    color: #363636;
     color: var(--text-main);
 }
 
 footer {
-    border-top: 1px solid #526980;
+    border-top: 1px solid #dbdbdb;
     border-top: 1px solid var(--border);
     padding-top: 10px;
-    color: #a9b1ba;
+    color: #70777f;
     color: var(--text-muted);
 }
 
@@ -797,4 +797,4 @@ body > footer {
     }
 }
 
-/*# sourceMappingURL=dark.css.map */
+/*# sourceMappingURL=light.css.map */
