--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,500,600,700');
-@import url('https://fonts.googleapis.com/css?family=Fira+Code:400,500,600,700');
+@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,500,600,700");
+@import url("https://fonts.googleapis.com/css?family=Fira+Code:400,500,600,700");
 
 :root {
   --links: #7cc3bf;
 }
 
 body {
-  font-family: "Roboto Condensed", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, sans-serif !important;
+  font-family: "Roboto Condensed", -apple-system, system-ui, BlinkMacSystemFont,
+    "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !important;
 }
 
 @media (prefers-color-scheme: light) {
@@ -15,6 +15,11 @@ body {
     --links: #6ca8a5;
   }
 }
+
+.active-auto-refresh {
+  color: var(--links);
+}
+
 dt {
   margin-bottom: 6px;
 }
@@ -26,7 +31,6 @@ dd {
 tbody tr:nth-child(odd) {
   background: var(--background);
 }
-
 
 .code-block {
   background: var(--background);
